add TXT record
