# docs/swagger.json
@@ -80,6 +80,11 @@
         },
         "/domain/ns": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -109,6 +114,43 @@
                     }
                 }
             }
+        },
+        "/domain/txt": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Domains"
+                ],
+                "summary": "get TXT records for given domain",
+                "parameters": [
+                    {
+                        "minLength": 4,
+                        "type": "string",
+                        "description": "valid (sub)domain to query",
+                        "name": "domain",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK\" example([{\"registrar\":\"1.1.1.1\",\"value\":[\"exampletext\"]}])",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/structs.TxtResult"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -128,6 +170,20 @@
                 "registrar": {
                     "type": "string",
                     "example": "1.1.1.1"
+                }
+            }
+        },
+        "structs.TxtResult": {
+            "type": "object",
+            "properties": {
+                "registrar": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
